JSW Devsb/src/objects/Tech_Services_Quarterly_Plan__c.object
<CustomObject>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Of_Invitees_for_Each_Meet__c</fullName>
        <label>No Of Invitees for Each Meet</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Events__c</fullName>
        <label>No of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State</label>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Tech Services Quarterly Plan</relationshipLabel>
        <relationshipName>Tech_Services_Quarterly_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Date__c</fullName>
        <label>To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_of_Meet__c</fullName>
        <label>Type of Meet</label>
        <picklist>
            <picklistValues>
                <fullName>Mason Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineers Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IHB Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractors Meet</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Tech Services Quarterly Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tech Services Quarterly Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Services Quarterly Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>